@startuml diagramme_uml_v1

skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam classFontStyle Bold
skinparam classHeaderBackgroundColor #2C3E50
skinparam classFontColor #2C3E50
skinparam classBackgroundColor #ECF0F1
skinparam classBorderColor #2C3E50
skinparam classBorderThickness 1.5
skinparam ArrowColor #2C3E50
skinparam ArrowThickness 1.5
skinparam PackageBackgroundColor #F8F9FA
skinparam PackageBorderColor #95A5A6
skinparam PackageFontStyle Bold
skinparam PackageFontSize 10
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 50
skinparam padding 5

left to right direction

package "fr.ulille.but.sae_s2_2026" #EBF5FB {

    interface Lieu {
    }

    interface Connexion {
        +getDepart() : Lieu
        +getArrivee() : Lieu
        +getModalite() : ModaliteTransport
    }

    enum ModaliteTransport {
        TRAIN
        AVION
        BUS
    }
}

package "sae.transport.comparison.models" #EAF7EE {

    enum TypeCout {
        CO2
        TEMPS
        PRIX
    }

    class Cout {
        - valeurs : Map<TypeCout, Double>
        --
        + Cout(prix : double, temps : double, co2 : double)
        + getValeur(type : TypeCout) : double
    }

    class Ville {
        - nom : String
        --
        + Ville(nom : String)
        + getNom() : String
        + equals(o : Object) : boolean
        + hashCode() : int
        + toString() : String
    }

    class Trajet {
        - depart : Lieu
        - arrivee : Lieu
        - cout : Cout
        - modalite : ModaliteTransport
        --
        + Trajet(depart, arrivee, cout, modalite)
        + getDepart() : Lieu
        + getArrivee() : Lieu
        + getCout() : Cout
        + getModalite() : ModaliteTransport
    }

    class Voyageur {
        - nom : String
        - typeCout : TypeCout
        --
        + Voyageur(nom : String, typeCout : TypeCout)
        + getNom() : String
        + getTypeCout() : TypeCout
        + setTypeCout(typeCout : TypeCout) : void
    }

    class Plateforme {
        - trajets : List<Trajet>
        - villes : List<Ville>
        --
        + Plateforme()
        + getTrajets() : List<Trajet>
        + getVilles() : List<Ville>
        + setTrajets(trajets : List<Trajet>) : void
        + setVilles(villes : List<Ville>) : void
        + chargerDepuisTableau(data : String[]) : void
        + filtrerParModalite(modalite : ModaliteTransport) : List<Trajet>
        + getVille(nom : String) : Ville
        + cheminExiste(nomDepart, nomArrivee, modalite) : boolean
        + getTrajetsTries(critere : TypeCout) : List<Trajet>
        + filtrerParBorne(trajets, critere, borneMax) : List<Trajet>
    }
}

' Implémentations
Ville        ..|> Lieu
Trajet       ..|> Connexion

' Dépendances vers lib IUT
Trajet       ..>  ModaliteTransport
Plateforme   ..>  ModaliteTransport

' Relations internes
Trajet       -->  Cout         : utilise
Voyageur     -->  TypeCout     : optimise
Cout         -->  TypeCout     : contient
Plateforme   "1" o-- "0..*" Trajet : contient
Plateforme   "1" o-- "0..*" Ville  : contient

@enduml
